Added API for execute now
